# MindVault

./: .pre-commit-config.yaml  README.md  chromium_bookmarks.html  contributing.md  index.html  pyproject.toml  search.json  settings.ini  sitemap.xml  todo.md
MindVault/: _modidx.py
MindVault/bookmarks/: bookmarks.py
MindVault/bookmarks/api/: schema.py
MindVault/bookmarks/browser/: broswe_bookmarks_handler.py  chrome_bookmarks.py  chromium.py  constants.py  custom_types.py
MindVault/bookmarks/models/: bookmark.py  browser.py  user.py
MindVault/bookmarks/notebooks/: chromium.py
MindVault/bookmarks/utils/: graph_operations.py
_proc/: 00_core.ipynb  01_browser_bookmarks.ipynb  01_chrome_bookmarks.ipynb  01_chromium_bookmarks.ipynb  index.ipynb  nbdev.yml
_proc/_docs/: index.html  robots.txt
nbs/: 01_browser_bookmarks.ipynb  01_chrome_bookmarks.ipynb  01_chromium_bookmarks.ipynb  index.ipynb
